tests/fixtures/invalid/bytes_floordiv_dict.py
# Cannot floor divide Bytes and Dict[str, int]
x: bytes = b"hello" // {"a": 1}
